<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".StartActivity">
    <item android:id="@+id/action_graph" android:title="@string/title_activity_graph"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_history" android:title="@string/title_activity_history"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_about" android:title="@string/title_activity_about"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
