<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingRight="8dp"
    android:paddingLeft="8dp"
    android:elevation="6dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/l_compit_sel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:elevation="8dp"
            android:orientation="horizontal"
            android:background="@drawable/curved_background">

            <Button
                android:id="@+id/b_compit_target"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/tab_button_selected_orange"
                android:textColor="#ffffff"
                android:text="@string/comp0"
                android:paddingRight="4dp"
                android:paddingLeft="4dp" />

            <Button
                android:id="@+id/b_compit_avg"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/tab_button_unselected"
                android:textColor="#ffffff"
                android:text="@string/comp1"
                android:paddingRight="4dp"
                android:paddingLeft="4dp" />
            <Button
                android:id="@+id/b_compit_fast"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/tab_button_unselected"
                android:textColor="#ffffff"
                android:text="@string/comp2"
                android:paddingRight="4dp"
                android:paddingLeft="4dp" />
            <Button
                android:id="@+id/b_compit_long"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/tab_button_unselected"
                android:textColor="#ffffff"
                android:text="@string/comp3"
                android:paddingRight="4dp"
                android:paddingLeft="4dp" />
            <Button
                android:id="@+id/b_compit_more"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/tab_button_unselected"
                android:textColor="#ffffff"
                android:text="@string/comp4"
                android:paddingRight="4dp"
                android:paddingLeft="4dp" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp"
        android:paddingTop="4dp">



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:gravity="center"
        android:elevation="6dp"
        android:background="@drawable/curved_background">

    <TextView
        android:id="@+id/t_compit_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:textSize="12sp"
        android:gravity="center"
        android:paddingRight="8dp"
        android:paddingLeft="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/description"/>


    </LinearLayout>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="5"
            android:background="@drawable/curved_background"
            android:elevation="6dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:gravity="center"
                android:paddingTop="2dp"
                android:paddingBottom="4dp"
                android:text="@string/myrun"/>

            <TextView
                android:id="@+id/t_compit_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:gravity="center"
                android:paddingRight="8dp"
                android:paddingLeft="8dp"
                android:elevation="6dp"
                android:background="@drawable/oval"
                android:text="@string/float0"/>
            <TextView
                android:id="@+id/l_compit_target"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textSize="12sp"
                android:gravity="center"
                android:paddingBottom="4dp"
                android:text="@string/km"/>





        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="@drawable/cardrect"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="5"
            android:background="@drawable/curved_background"
            android:elevation="6dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textSize="16sp"
                android:gravity="center"
                android:paddingTop="2dp"
                android:paddingBottom="4dp"
                android:text="@string/opponent"/>
            <TextView
                android:id="@+id/t_compit_opp_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:gravity="center"
                android:paddingRight="8dp"
                android:paddingLeft="8dp"
                android:elevation="6dp"
                android:background="@drawable/oval"
                android:text="@string/float0"/>
            <TextView
                android:id="@id/l_compit_target"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textSize="12sp"
                android:gravity="center"
                android:paddingBottom="4dp"
                android:text="@string/km"/>



        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:elevation="6dp"
        android:background="@drawable/curved_background"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/t_compit_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:layout_weight="2"
                android:gravity="center"
                android:paddingRight="8dp"
                android:paddingLeft="8dp"
                android:text="@string/time0"/>

            <TextView
                android:id="@+id/t_compit_steps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_weight="1"
                android:paddingRight="8dp"
                android:paddingLeft="8dp"
                android:text="@string/int0"/>

            <TextView
                android:id="@+id/t_compit_cal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingRight="8dp"
                android:paddingLeft="8dp"
                android:text="@string/int0"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textSize="12sp"
                android:layout_weight="2"
                android:gravity="center"
                android:paddingRight="8dp"
                android:paddingLeft="8dp"
                android:text="@string/timer"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textSize="12sp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingRight="8dp"
                android:paddingLeft="8dp"
                android:text="@string/steps"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:textSize="12sp"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingRight="8dp"
                android:paddingLeft="8dp"
                android:text="@string/calories"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="64dp"
        android:paddingRight="64dp"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" >
        <TextView
            android:id="@+id/t_compit_opp_steps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textSize="2sp"
            android:gravity="center"
            android:visibility="invisible"
            android:text="@string/float0"/>

    <Button
        android:id="@+id/b_compit_start"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/start"
        android:elevation="6dp"
        android:background="@drawable/buttonrect"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:textSize="2sp"
            android:gravity="center"
            android:visibility="invisible"
            android:text="@string/steps"/>
    </LinearLayout>
</LinearLayout>